--- a/frontend/src/style/Form.css
+++ b/frontend/src/style/Form.css
@@ -9,27 +9,30 @@ h1 {
 }
 
 #form-page {
+  align-items: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .form {
   align-items: center;
   align-items: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  height: 55vh;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: auto;
-  padding: 2.5vh 0;
-  width: 45%;
+  width: 80%;
 }
-
 
 #title {
   border: none;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   font-family: 'Stardos Stencil', cursive;
   font-size: 1.5em;
   margin: auto;
@@ -38,20 +41,13 @@ h1 {
   width: 60%;
 }
 
-#body {
-  border: none;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  font-family: 'Stardos Stencil', cursive;
-  font-size: 1.5em;
-  height: 25vh;
-  padding: 2vh;
-  text-align: center;
-  width: 70%;
-}
-
 .form-button {
   background-color: rgba(0, 0, 0, 0.774);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   border: none;
   border-radius: 50px;
   color: white;
@@ -63,7 +59,7 @@ h1 {
   padding: 2vh;
 }
 
-.form-button[disabled]{
+.form-button[disabled] {
   border: solid black 1px;
   background-color: #cccccc;
   color: #666666;
