style: muda estilo da página History para compreender nova divisão de componentes

--- a/frontend/src/style/History.css
+++ b/frontend/src/style/History.css
@@ -7,32 +7,30 @@
 
 #content-history h1 {
   font-family: 'Stardos Stencil', cursive;
-  font-size: 2.5em;
+  font-size: 2em;
   letter-spacing: 0.3rem;
   margin-bottom: 3vh;
   text-align: center;
 }
 
 #content-body {
-  font-family: 'Zen Kaku Gothic Antique', sans-serif;
-  line-height: 2;
-  font-size: larger;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   margin: auto;
-  padding-bottom: 2vh;
-  text-align: justify;
-  width: 95%;
+  padding: 5vh 2vw;
+  width: 85%;
 }
 
 #dates {
   display: flex;
   justify-content: space-evenly;
   margin: auto;
+  margin-top: 15vh;
   width: 85%;
 }
 
 #dates div {
   align-items: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   display: flex;
   flex-direction: column;
   font-size: 1.2em;
@@ -44,14 +42,18 @@
 #buttons {
   display: flex;
   justify-content: space-evenly;
-  margin: 15vh auto;
+  margin: auto;
   margin-top: 5vh;
-  width: 25%;
+  width: 45%;
 }
 
 .button {
   background-color: rgba(0, 0, 0, 0.774);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   border: none;
   border-radius: 50px;
   color: white;
@@ -64,6 +66,7 @@
 }
 
 #history-title {
+  font-size: 2em;
   text-align: center;
   margin: 5vh auto;
 }
@@ -75,14 +78,16 @@
 
 .single-update {
   align-items: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   display: flex;
   flex-direction: column;
-  height: 45vh;
+  height: 55vh;
   justify-content: space-evenly;
   margin: 2vh auto;
   padding: 5vh 4vw;
-  width: 40vw;
+  width: 45vw;
 }
 
 .single-update h3 {
@@ -93,24 +98,13 @@
   margin-bottom: 3vh;
 }
 
-p {
-  font-family: 'Zen Kaku Gothic Antique', sans-serif;
-}
-
-.update-body {
-  font-family: 'Zen Kaku Gothic Antique', sans-serif;
-  font-size: small;
-  margin: auto;
-  margin-bottom: 5vh;
-  padding-bottom: 2vh;
-  overflow: auto;
-  text-align: justify;
-  width: 95%;
-}
-
 .back-button {
   background-color: rgba(0, 0, 0, 0.774);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   border: none;
   border-radius: 50px;
   color: white;
@@ -119,5 +113,11 @@ p {
   font-weight: 700;
   letter-spacing: 0.2rem;
   margin: auto;
-  padding: 1vh;
+  margin-top: 2vh;
+  padding: 1.5vh;
+}
+
+.history-dates {
+  margin-top: 2vh;
+  text-align: center;
 }
